src/tests/golden/invalid_il/alloca_return_escape.il
il 0.2.0

func @main() -> ptr {
entry:
  %slot = alloca 8
  ret %slot
}
